Version X.X, XXXX-XX-XX

  [ Denis Denisov ]

* Implemented the reactivation of connections from state file.

  [ Osamu Aoki ]

*  Clarifyed the usage of multiple URLs in manpage.

  [ Stephen Thirlwall ]

* HTTPS/FTPS support using OpenSSL.



Version 2.7, 2016-05-01

  [ Joao Eriberto Mota Filho ]

* Added new architectures to configure.ac.
* Updated some points in configure.ac and Makefile.am.

  [ Mridul Malpotra ]

* Fixed num_connections error when invalid values are given.

  [ Stephen Thirlwall ]

* Add missing m4 path to configure.ac file.
* Added the autogen.sh script.
* Cleaned the source code, removing auto generated files.



Version 2.6, 2016-03-20

  [ Joao Eriberto Mota Filho ]

* Added the Brazilian Portuguese translation.
* Moved all .c and .h to new /src directory.
* Moved all .po files to new /po directory.
* Moved some files to doc/ directory.
* Renamed README.to-contribute to CONTRIBUTING.md.
* Switched the build and install system to autotools.
* Updated all copyright notices.

  [ Ivan Gimenez ]

* Fix several compilation warnings.

  [ Stephen Thirlwall ]

* Alterate display expands to terminal width.



Version 2.5, 2015-11-01

  [ Joao Eriberto Mota Filho ] 2015-11-01

* Changed the homepage of the project in several files.
* axel.h: bumped to 2.5 version.
* configure:
    - Changed the default prefix to /usr.
    - Changed the default etc path to /etc.
    - Changed CFLAGS and LDFLAGS definition lines to allow external values,
      as GCC hardening sent by Debian.
* gui/: removed. The binary axel-kapt depended on kaptain that is no longer
        available for QT5 (dead upstream development). For details, see
        https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=789819
* http.c: fix a possible buffer overflow.
* Makefile: disabled the .po regeneration/merge actions to avoid changes in
    source code when building. I will try to fix it in future.
* manpage:
    - Moved to man/ directory.
    - Using txt2man to generate the manpage.